= SNAPSHOT =
Fix EXC_BAD_ACCESS on iOS #389 Thanks claudiovolpato
Return error if bad device id is passed to disconnect #410

= 1.2.0 =
Added un-scanned Peripheral concept on Android #560 Thanks doug-a-brunner
Fixed failure to fire callbacks on Android when read or write in flight #561 Thanks doug-a-brunner
Fixed dangling promises when reconnecting Android #562 Thanks doug-a-brunner
Added error when starting a scan while another is running Android #565 Thanks doug-a-brunner
Request MTU Size on Android #568 Thanks Domvel and Algoritma
Don't prompt user to enable Bluetooth on iOS CBCentralManagerOptionShowPowerAlertKey #580 #174 Thanks H0rst and cairinmichie
Implement showBluetoothSettings on iOS #591 Thanks cairinmichie
Improve disconnect logic on Android #582

= 1.1.9 =
iOS error #558

= 1.1.8 =
Fix merge conflicts

= 1.1.7 =
Use same characteristic uuid with different service in iOS #349 Thanks Riccardo Degan (riccardodegan-geekcups)
ble.read() example #346 Thanks Kelton Temby (ktemby)
Remove pending stopNotificationCallback for iOS #355 Thanks Georges-Etienne Legendre (legege)
add missing `resolve` and `reject` callbacks to Promise wrapper #360 Thanks Audrius Jakumavicius
(aj-dev)
Fix documentation typo #371 Thanks keanyc
Fix documentation typo #424 Thanks ChanHyuk-Im
Fix duplicate symbol when using with with cordova-plugin-ble-peripheral #373 Thanks Luca Torella (lucatorella)
Add admonition about using with beacons #413 Hugh Barnes (hughbris)
Handle errors in didUpdateValueForCharacteristic #385 Thanks soyelporras
Fix spelling error in Android code # Thanks doug-a-brunner
cordova-plugin-compat deprecated #466 #483 thanks ddugue
Fix NullPointer exception on scan #504
Fixed deprecated iOS CBPeripheral RSSI calls and build warning #446 Thanks doug-a-brunner
Trapped commands that caused iOS API misuse warnings #450 Thanks doug-a-brunner
Fire callbacks on iOS when device is disconnecting #451 Thanks doug-a-brunner